fix(core/pipeline): Pipeline graph overflow in firefox (#4520)

--- a/app/scripts/modules/core/src/pipeline/config/graph/pipelineGraph.less
+++ b/app/scripts/modules/core/src/pipeline/config/graph/pipelineGraph.less
@@ -137,6 +137,10 @@ pipeline-graph, .pipeline-graph {
   }
 }
 
+svg.pipeline-graph {
+  overflow: visible;
+}
+
 .stage-group {
   .label-component {
     cursor: default;
